--- a/Server/static/style.css
+++ b/Server/static/style.css
@@ -123,7 +123,7 @@ body {
 
 
 #footer {
-	margin-top: 0px;
+	/* margin-top: 0px; */
 /*	margin-bottom: 50px;
 	margin-right: 100px;
 	margin-left:  100px;*/
